apps/production/photoprism/micah/patch-mariadb-volume.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  template:
    spec:
      volumes:
        - name: data
          hostPath:
            path: /mnt/thedatapool/app-data/photoprism-micah/mariadb-data
