apps/production/photoprism/micah/patch-photoprism-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism-app
spec:
  template:
    spec:
      containers:
        - name: photoprism
      volumes:
        - name: import
          hostPath:
            path: /mnt/thedatapool/photos/micah/import
        - name: originals
          hostPath:
            path: /mnt/thedatapool/photos/micah/organized-originals
        - name: storage
          hostPath:
            path: /mnt/thedatapool/app-data/photoprism-micah/app/storage
