apps/production/photoprism/micah/patch-photoprism-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoprism-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
    - hosts:
        - photos.micah.willeke.com
      secretName: photos-micah-willeke-com-tls
  rules:
    - host: photos.micah.willeke.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photoprism-service
                port:
                  name: web-ui
